--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=MyCRUD
+spring.datasource.url=jdbc:postgresql://localhost:5432/My_CRUD
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.jpa.generate-ddl=true
