--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/My_CRUD
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.generate-ddl=true
+
+server.port=8081
+
